# Arixa

./: .arixa-cache.json  .coverage  .gitignore  ARCHITECTURE.md  ARCHITECTURE_INCONSISTENCIES.md  BUILD_SYSTEM.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPILER_OVERVIEW.md  COMPLETE_ABI_FIX_SUMMARY.md  COMPLETE_FIXES_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  CORRECTNESS_FIXES_SUMMARY.md  EDITOR_SETUP.md  EDITOR_TOOLS_SYNC.md  FORMATTING.md  INSTALL.md  LICENSE  Makefile  OPTIMIZATION_AUDIT_REPORT.md  OPTIMIZATION_IMPLEMENTATION_COMPLETE.md  PARALLEL_COMPILATION_SUMMARY.md  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  SPEC.md  STDLIB_EXTENSIONS_SUMMARY.md  TESTING.md  _asm_check.s  benchmark_output_0.py  benchmark_output_1.py  benchmark_parallel.py  compare_debug.py  compare_release.py  current_test_status.txt  debug_test.arixa  direct_test_simple.py  extern_simple.ll  (+36 more)
mutants/: .gitignore  __init__.py  pyproject.toml
mutants/astra/: __init__.py
mutants/tests/: __init__.py  conftest.py  golden_helpers.py  test_advanced_optimizations.py  test_all_optimizations.py  test_astpm.py  test_build.py  test_cast_semantics.py  test_check.py  test_compilation_complex.py  test_compiler_capabilities.py  test_comptime.py  test_experimental_optimizations.py  test_ffi.py  test_fixed_int_types.py  test_formatter_defaults.py  test_frontend.py  test_full_programs.py  test_golden_helpers.py  test_heavy_coverage_matrix.py  test_integer_type_fidelity.py  test_layout_dynamic_int.py  test_lexer.py  test_lsp_server.py  test_main_default_return.py  test_match_runtime.py  test_mega_demo.py  test_module_resolver.py  test_optimization_enhancements.py  test_optimizer_edges.py  test_packaging_integration.py  test_pkg.py  test_property_fuzz.py  test_semantic.py  test_tools.py  (+8 more)
(+637 files in other folders)
